[package]
name = "compiler-homework"
version = "0.1.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.6"
thiserror = "1.0"
anyhow = "1.0"
dynasmrt = "1.0"
log = "0.4"
env_logger = "0.8"
